--- a/client/index.html
+++ b/client/index.html
@@ -18,25 +18,66 @@
     </p>
 </div>
 
-<div> 
-    <button data-toggle ="collapse"data-target = "#duel"> Duelists </button>
+<div>
+   <button data-toggle ="collapse"data-target = "#duel"> Duelists </button> 
+   <ul>
+        <li> Jett </li>
+        <li> Reyna </li>
+        <li> Raze </li>
+        <li> Neon </li>
+   </ul>
 </div>
-    <div id = "duel">
-        <p> 
-            <form id = "form-duel" >
-                <input id = "in-tag" name = "tag"></input>
-                <button type = "submit"> Search </button> 
-            </form>
-            <div id = duel-container>
 
-            </div>
-        </p>
+
+<div> 
+    <button data-toggle ="collapse"data-target = "#init" aria-expanded="true"> Initiators </button>
+    <div id = "init" class = "collapse mt-3">
+        <ul>
+                <li> Sova </li>
+                <li> Fade </li>
+                <li> Skye </li>
+                <li> Gekko </li>
+        </ul>
+    </div>
+ </div>
+<div> 
+    <button data-toggle ="collapse"data-target = "#sen" class = "button SenButton"> Sentinels </button>
+    <div id = "sen" class = "collapse mt-3">
+        <ul> 
+                <li> Killjoy </li>
+                <li> Deadlock </li>
+                <li> Cypher </li>
+                <li> Sage </li>
+        </ul>
+    </div>
+ </div>
+<div> 
+    <button data-toggle ="collapse"data-target = "#control"> Controllers </button>
+    <div id = "control" class = "collapse mt-3"></div>
+        <ul> 
+            <li> Omen </li>
+            <li> Astra </li>
+            <li> Viper </li>
+            <li> Brimstone </li>
+    </ul>
+
+    </div> 
+</div>
+
+<div id = "duel">
+    <p> 
+        <form id = "form-duel" >
+            <input id = "in-tag" name = "tag"></input>
+            <button type = "submit"> Search </button> 
+        </form>
+    </p>    
+
     </div>
 </div> 
 
-<div> <button data-toggle ="collapse"data-target = "#init"> Initiators </button> </div>
-<div> <button data-toggle ="collapse"data-target = "#sen"> Sentinels </button> </div>
-<div> <button data-toggle ="collapse"data-target = "#control"> Controllers </button> </div>
+<div id = "duel-container">
+
+</div>
     
 <script src ="fetch-client.js"></script>
 
