Working collapse added

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
         <button id = "Duelist" data-toggle="collapse"data-target = "#duel" class = "btn btn-primary btn-lg"> Duelists </button> 
         <div id = "duel" class = "collapse mt-3"> 
             <ul>
+                <div id = "Duelistcon"></div>
                 <li> Jett </li>
                 <li> Reyna </li>
                 <li> Raze </li>
